--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -8,7 +8,7 @@
 <li><a href="../pt/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:O que &eacute; o FreeCAD (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:O que &eacute; FreeCAD (45% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Ce este FreeCAD (55% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1063;&#1090;&#1086; &#1090;&#1072;&#1082;&#1086;&#1077; FreeCAD (91% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;FreeCAD &#30340;&#23450;&#20301; (45% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12392;&#12399; (27% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -77,11 +77,8 @@
 </p><p>Parametrick&yacute; n&aacute;vrh, kter&yacute; se b&#283;&#382;n&#283; pou&#382;&iacute;v&aacute; v oblastech jako architektura, stroj&iacute;renstv&iacute; a produktov&yacute; design, pom&aacute;h&aacute; efektivn&#283; vytv&aacute;&#345;et slo&#382;it&eacute; tvary a formy a umo&#382;&#328;uje upravovat a doladit r&#367;zn&eacute; aspekty n&aacute;vrhu prost&#345;ednictv&iacute;m modifikace vstupn&iacute;ch hodnot. Tento p&#345;&iacute;stup je obzvl&aacute;&scaron;t&#283; &uacute;&#269;inn&yacute; v softwaru jako FreeCAD, kde mohou u&#382;ivatel&eacute; tyto parametry nastavovat dynamicky, aby automatizovali a optimalizovali proces n&aacute;vrhu.
 </p><p>FreeCAD je multiplatformn&iacute; aplikace, kter&aacute; b&#283;&#382;&iacute; na Windows, macOS a Linuxu a je zcela <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open-source</a>. To znamen&aacute;, &#382;e je zdarma k pou&#382;it&iacute;, &uacute;prav&aacute;m a distribuci. FreeCAD je vyv&iacute;jen nad&scaron;enou komunitou, nikoli jednou spole&#269;nost&iacute;, co&#382; umo&#382;&#328;uje neust&aacute;l&eacute; vylep&scaron;ov&aacute;n&iacute; a aktualizace.
 </p><p>Tento software obsahuje mnoho komponent s otev&#345;en&yacute;m zdrojov&yacute;m k&oacute;dem a lze ho integrovat do jin&yacute;ch aplikac&iacute;. Je zn&aacute;m&yacute; svou vysokou p&#345;izp&#367;sobitelnost&iacute; a podporuje celou &#345;adu form&aacute;t&#367; soubor&#367;. D&iacute;ky t&eacute;to flexibilit&#283; a siln&eacute; podpo&#345;e ze strany komunity je FreeCAD v&yacute;konn&yacute;m n&aacute;strojem ve sv&#283;t&#283; open source. FreeCAD, kter&yacute; byl vyvinut kolektivn&#283; glob&aacute;ln&iacute; komunitou program&aacute;tor&#367;, nad&scaron;enc&#367; a u&#382;ivatel&#367;, je p&#345;&iacute;kladem spolupracuj&iacute;c&iacute;ho ducha open-source projekt&#367;. Nab&iacute;z&iacute; v&yacute;znamn&eacute; v&yacute;hody, jako je p&#345;izp&#367;sobitelnost a skriptovatelnost, a p&#345;in&aacute;&scaron;&iacute; sofistikovan&eacute; funkce, kter&eacute; se obvykle nach&aacute;zej&iacute; v profesion&aacute;ln&iacute;m softwaru, do dosahu ka&#382;d&eacute;ho u&#382;ivatele, kter&yacute; se zaj&iacute;m&aacute; o 3D modelov&aacute;n&iacute; a design.
+</p><p>Ofici&aacute;ln&iacute; webov&eacute; str&aacute;nky FreeCADu najdete na adrese <a rel="nofollow" class="external free" href="https://freecad.org">https://freecad.org</a>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The official website of FreeCAD is at <a rel="nofollow" class="external free" href="https://freecad.org">https://freecad.org</a>
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Read more:</b>
 </p>
@@ -102,29 +99,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014641
+Cached time: 20260112014701
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.052 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 81/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.120 seconds
+Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 8316/2097152 bytes
 Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2899/5000000 bytes
+Unstrip post&#8208;expand size: 2900/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.531      1 -total
- 68.43%    7.206      1 Template:Manual:TOC
- 50.14%    5.280      1 Manual:Summary/cs
- 28.75%    3.028      2 Template:Docnav
+100.00%   12.782      1 -total
+ 70.45%    9.005      1 Template:Manual:TOC
+ 52.28%    6.682      1 Manual:Summary/cs
+ 25.64%    3.277      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014641 and revision id 1736858. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014701 and revision id 1736860. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
