--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -80,11 +80,9 @@
 </p><p>Ofici&aacute;ln&iacute; webov&eacute; str&aacute;nky FreeCADu najdete na adrese <a rel="nofollow" class="external free" href="https://freecad.org">https://freecad.org</a>
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../About_FreeCAD.html" title="About FreeCAD">About FreeCAD</a></li>
-<li><a href="../Feature_list.html" title="Feature list">List of features</a></li>
-<li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">Screenshots and user cases</a></li></ul>
-</div>
+<ul><li><a href="../About_FreeCAD.html" title="About FreeCAD">O programu FreeCAD</a></li>
+<li><a href="../Feature_list.html" title="Feature list">Seznam funkc&iacute;</a></li>
+<li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">Screenshoty a p&#345;&iacute;klady pou&#382;it&iacute;</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -96,13 +94,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014734
+Cached time: 20260112015336
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.054 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 79/1000000
+CPU time usage: 0.063 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 78/1000000
 Post&#8208;expand include size: 8316/2097152 bytes
 Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
@@ -112,13 +110,13 @@ Unstrip post&#8208;expand size: 2900/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.893      1 -total
- 79.70%   11.870      1 Template:Manual:TOC
- 63.94%    9.522      1 Manual:Summary/cs
- 17.93%    2.671      2 Template:Docnav
+100.00%    9.513      1 -total
+ 71.30%    6.783      1 Template:Manual:TOC
+ 53.42%    5.082      1 Manual:Summary/cs
+ 25.18%    2.395      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014734 and revision id 1736862. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112015336 and revision id 1736864. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
