--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -14,8 +14,8 @@
 <li><a href="../ja/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12452;&#12531;&#12473;&#12488;&#12540;&#12523; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#49444;&#52824;&#54616;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">What is FreeCAD</a></div>
-    <div><a href="../Manual;The_FreeCAD_Interface.html" title="Manual:The FreeCAD Interface">The FreeCAD Interface</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">Co je FreeCAD</a></div>
+    <div><a href="../Manual;The_FreeCAD_Interface.html" title="Manual:The FreeCAD Interface">Rozhran&iacute; FreeCADu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -158,15 +158,15 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112015510
+Cached time: 20260112015608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.195 seconds
 Preprocessor visited node count: 124/1000000
-Post&#8208;expand include size: 8178/2097152 bytes
-Template argument size: 636/2097152 bytes
+Post&#8208;expand include size: 8163/2097152 bytes
+Template argument size: 626/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -174,13 +174,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.575      1 -total
- 72.70%    6.961      1 Template:Manual:TOC
- 50.50%    4.835      1 Manual:Summary/cs
- 23.34%    2.235      2 Template:Docnav
+100.00%    9.818      1 -total
+ 76.21%    7.482      1 Template:Manual:TOC
+ 48.45%    4.757      1 Manual:Summary/cs
+ 19.78%    1.942      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015510 and revision id 1736866. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015608 and revision id 1736868. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
