--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -69,7 +69,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p>FreeCAD is licensed under the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a> license, which allows you to download, install, redistribute, and use it for any purpose, commercial or non-commercial, without any restrictions. You retain full ownership of the files you create.
+<p>FreeCAD je licencov&aacute;n pod licenc&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a>, kter&aacute; v&aacute;m umo&#382;&#328;uje stahovat, instalovat, redistribuovat a pou&#382;&iacute;vat ho pro jak&eacute;koli &uacute;&#269;ely, komer&#269;n&iacute; i nekomer&#269;n&iacute;, bez jak&yacute;chkoli omezen&iacute;. Zachov&aacute;v&aacute;te si pln&eacute; vlastnictv&iacute; soubor&#367;, kter&eacute; vytvo&#345;&iacute;te.
 </p><p>FreeCAD operates consistently across Windows, macOS, and Linux, although the installation process varies by platform. For Windows and Mac users, the FreeCAD community offers ready-to-use precompiled installers. On Linux, the source code is provided to distribution maintainers who package the software for their specific systems. Typically, Linux users can install FreeCAD directly through their system&rsquo;s software manager.
 </p><p>The official FreeCAD download page can be found at the <a rel="nofollow" class="external text" href="https://www.freecad.org/downloads.php">FreeCAD download page</a>. Additional information about the installation process can be found at the dedicated <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Download">download wiki</a>.
 </p><p><b>FreeCAD versions</b>
@@ -158,12 +158,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112015621
+Cached time: 20260112015740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.109 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -174,13 +174,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.501      1 -total
- 67.06%    6.371      1 Template:Manual:TOC
- 49.40%    4.693      1 Manual:Summary/cs
- 27.71%    2.633      2 Template:Docnav
+100.00%   11.529      1 -total
+ 71.87%    8.286      1 Template:Manual:TOC
+ 50.71%    5.846      1 Manual:Summary/cs
+ 24.11%    2.780      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015621 and revision id 1736870. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015740 and revision id 1736872. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
