--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik: Instalacja (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--med" title="**Manual:Instala&ccedil;&atilde;o** (32% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Instalare (23% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--med" title="&#1047;&#1072;&#1074;&#1072;&#1085;&#1090;&#1072;&#1078;&#1077;&#1085;&#1085;&#1103; (19% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh-cn/Manual;Installing.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#23433;&#35013; (66% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
@@ -72,7 +72,7 @@
 <p>FreeCAD je licencov&aacute;n pod licenc&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a>, kter&aacute; v&aacute;m umo&#382;&#328;uje stahovat, instalovat, redistribuovat a pou&#382;&iacute;vat ho pro jak&eacute;koli &uacute;&#269;ely, komer&#269;n&iacute; i nekomer&#269;n&iacute;, bez jak&yacute;chkoli omezen&iacute;. Zachov&aacute;v&aacute;te si pln&eacute; vlastnictv&iacute; soubor&#367;, kter&eacute; vytvo&#345;&iacute;te.
 </p><p>FreeCAD funguje konzistentn&#283; na Windows, macOS a Linuxu, i kdy&#382; se proces instalace li&scaron;&iacute; podle platformy. Pro u&#382;ivatele Windows a Mac nab&iacute;z&iacute; komunita FreeCAD p&#345;ipraven&eacute; p&#345;edkompilovan&eacute; instala&#269;n&iacute; programy. Na Linuxu je zdrojov&yacute; k&oacute;d poskytov&aacute;n spr&aacute;vc&#367;m distribuc&iacute;, kte&#345;&iacute; bal&iacute; software pro sv&eacute; konkr&eacute;tn&iacute; syst&eacute;my. Obvykle mohou u&#382;ivatel&eacute; Linuxu nainstalovat FreeCAD p&#345;&iacute;mo prost&#345;ednictv&iacute;m spr&aacute;vce softwaru sv&eacute;ho syst&eacute;mu.
 </p><p>Ofici&aacute;ln&iacute; str&aacute;nka pro sta&#382;en&iacute; FreeCADu se nach&aacute;z&iacute; na <a rel="nofollow" class="external text" href="https://www.freecad.org/downloads.php">str&aacute;nce pro sta&#382;en&iacute; FreeCADu</a>. Dal&scaron;&iacute; informace o instala&#269;n&iacute;m procesu najdete na speci&aacute;ln&iacute; <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Download">wiki str&aacute;nce v&#283;novan&eacute; sta&#382;en&iacute;</a>.
-</p><p><b>FreeCAD versions</b>
+</p><p><b>Verze FreeCADu</b>
 </p><p>The official stable releases of FreeCAD are available on the referenced download page and within your distribution's software manager. However, FreeCAD's development pace is brisk, with new features and bug fixes incorporated almost daily. Due to the extended periods between stable releases, you may want to experiment with more current, bleeding-edge versions of FreeCAD. These development versions, or pre-releases, can be found at the same download page. For users on Ubuntu or Fedora, the FreeCAD community also provides <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers/+archive/ubuntu/freecad-daily">PPA</a> (Personal Package Archives) and <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a> 'daily builds', which are regularly updated with the latest developments.
 </p><p>If you plan to install FreeCAD on a virtual machine, be aware that its performance might be significantly impaired, and perhaps unusable, due to limited OpenGL support in many virtual machines.
 </p>
@@ -158,12 +158,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112015914
+Cached time: 20260112015942
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.127 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -174,13 +174,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.502      1 -total
- 70.15%    5.964      1 Template:Manual:TOC
- 53.49%    4.548      1 Manual:Summary/cs
- 25.56%    2.173      2 Template:Docnav
+100.00%   10.030      1 -total
+ 72.56%    7.278      1 Template:Manual:TOC
+ 56.52%    5.669      1 Manual:Summary/cs
+ 22.57%    2.264      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015913 and revision id 1736876. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015942 and revision id 1736878. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
